:white_check_mark: Update tests